Fixed table overflow issue.  Min 1000 width now required.

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -189,6 +189,12 @@
   width: 40px;
 }
 
+#tabContent > table > tbody > tr > td.lineBodyTD {
+  /*width: 100%;
+  display:table;
+  white-space: pre-wrap;
+  word-wrap: break-word;*/
+}
 
 #searchLi {
   float:right;
